--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,95 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="cor-azul">
     <ion-title>
-      Tab 1
+      <img src="assets/LOGO.png">
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <br>
+  <ion-toolbar>
+    <ion-searchbar placeholder="Pesquisar"></ion-searchbar>
+  </ion-toolbar>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <p>
+    <ion-chip outline color="primary">
+      <ion-label>Filtrar <ion-icon name="filter-outline"></ion-icon>
+      </ion-label>
+    </ion-chip>
+
+    <ion-chip outline color="tertiary">
+      <ion-icon name="pricetag-outline"></ion-icon>
+      <ion-label>Promoção</ion-label>
+      <ion-icon name="close-circle"></ion-icon>
+    </ion-chip>
+    <ion-chip outline color="tertiary">
+      <ion-icon name="restaurant"></ion-icon>
+      <ion-label>Alimentícios</ion-label>
+      <ion-icon name="close-circle"></ion-icon>
+    </ion-chip>
+  </p>
+
+  <ion-card>
+    <ion-list>
+
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src="assets/passatempo.jpg">
+        </ion-thumbnail>
+        <ion-label>
+          <h2>Biscoito Passatempo</h2>
+          <h3>5.69</h3>
+          <p>Jaú Serve</p>
+        </ion-label>
+      </ion-item>
+
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src="assets/costela.jpg">
+        </ion-thumbnail>
+        <ion-label>
+          <h2>Costela Bovina</h2>
+          <h3>19.99 Kg</h3>
+          <p>Santa Catarina</p>
+        </ion-label>
+      </ion-item>
+
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src="assets/iogurte.jpg">
+        </ion-thumbnail>
+        <ion-label>
+          <h2>Iogurte Integarl Danone</h2>
+          <h3>5.99</h3>
+          <p>Azulão</p>
+        </ion-label>
+      </ion-item>
+
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src="assets/coca.jpg">
+        </ion-thumbnail>
+        <ion-label>
+          <h2>Coca-Cola 2L</h2>
+          <h3>4.99</h3>
+          <p>Azulão</p>
+        </ion-label>
+      </ion-item>
+
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src="assets/passatempo.jpg">
+        </ion-thumbnail>
+        <ion-label>
+          <h2>Biscoito Passatempo</h2>
+          <h3>5.69</h3>
+          <p>Jaú Serve</p>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+
+    
+  </ion-card>
+
 </ion-content>
